# Async_tokio_postgres_example

./: Cargo.toml  README.md
migrations/: V2__add_checked_date_todo.sql  V3__add_data_todo.sql  V4__upd_todo.sql  V5__init_queues.sql
src/: lib.rs  main.rs  migrations.rs
src/settings/: settings.toml
