[package]
name = "tokio-postgres-example"
version = "0.1.0"
edition = "2018"
default-run = "main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }

# migration
refinery = { version = "0.6", features = ["tokio-postgres"]}

# client
# postgres-types = { version = "0.2.2", features = ["derive"] }
postgres-types = { path="../rust-postgres/postgres-types", features = ["derive"]}
tokio-postgres= { version ="0.7.3", features = ["with-chrono-0_4","with-serde_json-1","with-uuid-0_8"]}
# tokio-postgres = { path="../rust-postgres/tokio-postgres", features = ["with-chrono-0_4","with-serde_json-1","with-uuid-0_8"]}
bytes = "1.0"
byteorder = "1.4.3"
futures = "0.3"
chrono="0.4"

#config
config="0.11"
lazy_static="1.4"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "migrations"
path = "src/migrations.rs"